--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,23 @@
-img {
-  width: 400px;
-  height: 500px;
+.btn {
+  width: 30%;
+}
+
+#search {
+  width: 30%;
+}
+
+.main-box {
+  width: 500px;
+  margin: 50px;
+}
+
+
+form {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gif {
+  margin-left: auto;
+  margin-right: auto;
 }
